--- a/html/tablesAndDataRepresentation.html
+++ b/html/tablesAndDataRepresentation.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/css/style.css">
 </head>
     <body>
-        <table border="4" align="center">
+        <table border="4" cellpadding="10px">
             <caption>Basic fruits list (this is an caption given by caption tag for google seo and screen readers)</caption>
             
             <thead>
