--- a/html/contactUs.html
+++ b/html/contactUs.html
@@ -6,9 +6,9 @@
     <link rel="stylesheet" href="/css/style.css">
 </head>
     <body>
-        <a href="mailto:someone@gmail.com?Subject=write%20your%20subject%20here&Body=write%20your%20body%20here">Mail Us</a><br>
-        <a href="tel:+910123456789">Call Me</a><br>
-        <a href="https://api.whatsapp.com/send?phone=0123456789&text=Hello,%20Aarnav%20How're%20You%20I%20am%20your_name">Whatsapp Me</a><br>
+        <a class="hyperlink-as-button" href="mailto:someone@gmail.com?Subject=write%20your%20subject%20here&Body=write%20your%20body%20here">Mail Us</a><br>
+        <a class="hyperlink-as-button" href="tel:+910123456789">Call Me</a><br>
+        <a class="hyperlink-as-button" href="https://api.whatsapp.com/send?phone=0123456789&text=Hello,%20Aarnav%20How're%20You%20I%20am%20your_name">Whatsapp Me</a><br>
         <hr>
         <a class="hyperlink-as-button" href="../index.html"> Back To Home page</a>
     </body>
