--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <a class="hyperlink-as-button" href="html/grouping.html">grouping</a><br><br>
             <a class="hyperlink-as-button" href="html/tablesAndDataRepresentation.html">tables and data representation</a><br><br>
             <a class="hyperlink-as-button" href="html/merging.html">merging in tables</a><br><br>
-            
+            <a class="hyperlink-as-button" href="/html/guess the number.html">Play Guess The Number (made by js)</a><br><br>
         </body>
     </div>
 
