working on CSS and JS

--- a/html/downloadMedia.html
+++ b/html/downloadMedia.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" href="../css/style.css">
 </head>
     <body>
-        <a class="hyperlink-as-button" href="../downloadables/EmptyPDF.pdf" download>Download pdf(EMPTY)</a><br>
-        <a class="hyperlink-as-button" href="../downloadables/SomeText.txt" download>Download txt(READ IT)</a><br>
+        <a class="hyperlink-as-button" href="../media/EmptyPDF.pdf" download>Download pdf(EMPTY)</a><br>
+        <a class="hyperlink-as-button" href="../media/SomeText.txt" download>Download txt(READ IT)</a><br>
         <a class="hyperlink-as-button" href="../media/blinks_no_sake.mp3" download>blink no sake-(one piece) song</a><br>
         <a class="hyperlink-as-button" href="../media/zoro.jpeg" download>download zoro image</a><br>
         <a class="hyperlink-as-button" href="../media/nami.jpeg" download>download nami image</a><br>
