--- a/html/notes3.html
+++ b/html/notes3.html
@@ -3,11 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Learning Javascript</title>
+    <title>My Notes 3</title>
     <link rel="stylesheet" href="/css/style.css">
-    <script src="/js/Variables%20and%20DataTypes.js" defer></script>
-    <script src="/js/Operators%20and%20Conditional%20Statements.js" defer></script>
-    <script src="/js/loop%20and%20Strings.js" defer></script>
 </head>
 <body>
     <h2>String Formatting Comparison</h2>
@@ -211,7 +208,6 @@ for (let key in arr) console.log(key); // 0,1,2
         </section>
 
         <hr>
-        <a class="hyperlink-as-button" href="/html/guess the number.html">Play Guess The Number (made by js)</a><br><br>
         <a class="hyperlink-as-button" href="../index.html"> Back To Home page</a><br><br>
     </main>
 </body>
