--- a/index.html
+++ b/index.html
@@ -4,27 +4,36 @@
         <meta charset="UTF-8">
         <title> Welcome Page </title>
         <link rel="stylesheet" href="/css/style.css">
+        <style>
+            body{
+                display: flex;
+                flex-direction: column;
+            }
+        </style>
     </head>
 
     <body>
         <div id="index_html_link_container">
 
-            <a class="hyperlink-as-button" href="html/notes1.html">My Notes 1</a><br><br>
-            <a class="hyperlink-as-button" href="html/notes2.html">My Notes 2</a><br><br>
-            <a class="hyperlink-as-button" href="html/notes3.html">My Notes 3</a><br><br>
+            <a class="hyperlink-as-button" href="html/notes1.html">My Notes 1</a>
+            <a class="hyperlink-as-button" href="html/notes2.html">My Notes 2</a>
+            <a class="hyperlink-as-button" href="html/notes3.html">My Notes 3</a>
             <a class="hyperlink-as-button" href="html/mediaAndInteractiveElements.html"> Watch Media Content</a><br><br>
-            <a class="hyperlink-as-button" href="html/religion.html">Know More In Religion</a><br><br>
-            <a class="hyperlink-as-button" href="html/formsAndUserInput.html">forms and user Input</a><br><br>
-            <a class="hyperlink-as-button" href="html/contactUs.html"> Contact Us</a><br><br>
+            <a class="hyperlink-as-button" href="html/religion.html">Know More In Religion</a>
+            <a class="hyperlink-as-button" href="html/formsAndUserInput.html">forms and user Input</a>
+            <a class="hyperlink-as-button" href="html/contactUs.html"> Contact Us</a>
             <a class="hyperlink-as-button" href="html/myFirstHtmlPage.html">my First HTML page</a><br><br>
-            <a class="hyperlink-as-button" href="html/downloadMedia.html"> Download Content</a><br><br>
-            <a class="hyperlink-as-button" href="html/listPage.html"> List Page</a><br><br>
-            <a class="hyperlink-as-button" href="html/attributes.html">attributes</a><br><br>
+            <a class="hyperlink-as-button" href="html/downloadMedia.html"> Download Content</a>
+            <a class="hyperlink-as-button" href="html/listPage.html"> List Page</a>
+            <a class="hyperlink-as-button" href="html/attributes.html">attributes</a>
             <a class="hyperlink-as-button" href="html/grouping.html">grouping</a><br><br>
-            <a class="hyperlink-as-button" href="html/tablesAndDataRepresentation.html">tables and data representation</a><br><br>
-            <a class="hyperlink-as-button" href="html/merging.html">merging in tables</a><br><br>
-            <a class="hyperlink-as-button" href="/html/guess the number.html">Play Guess The Number (made by js)</a><br><br>
-        </body>
-    </div>
+            <a class="hyperlink-as-button" href="html/tablesAndDataRepresentation.html">tables and data representation</a>
+            <a class="hyperlink-as-button" href="html/merging.html">merging in tables</a>
+            <a class="hyperlink-as-button" href="html/guess the number.html">Play Guess The Number (made by js)</a>
+            <a class="hyperlink-as-button" href="html/javascript1.html">Learning Javascript -- 1</a>
+            <a class="hyperlink-as-button" href="html/css1.html">Learning CSS -- 1</a>
+
+        </div>
+    </body>
 
 </html>
