--- a/html/javascript1.html
+++ b/html/javascript1.html
@@ -9,10 +9,32 @@
     <script src="/js/Loop and Strings.js"></script>
     <script src="/js/Arrays.js"></script>
     <link rel="stylesheet" href="/css/style.css">
+    <style>
+        .hyperlink-as-button{  
+            border: 3px , solid, rgb(15, 15, 12);
+            padding: 5px;
+            margin: 10px;
+            font-size: 30px;
+            text-decoration:none;
+            background-color: rgb(188, 236, 149);
+            border-color: rgb(2, 3, 71);
+            color: rgb(26, 29, 219);
+            display: inline-block;
+            transition-property: all;
+            transition-duration:0.2s;
+            transition-timing-function:ease-in-out;
+        }
+        .hyperlink-as-button:hover {
+            color: brown;
+            transform: scale(1.2);
+        }
+    </style>
 </head>
     <body>
         <p>inspect the page with an right click</p>
         <br>
         <p>then see the console</p>
+        <hr>
+        <a class="hyperlink-as-button" href="../index.html"> Back To Home page</a>
     </body>
 </html>
