alligned buttons to the left

--- a/index.html
+++ b/index.html
@@ -5,10 +5,6 @@
         <title> Welcome Page </title>
         <link rel="stylesheet" href="/css/style.css">
         <style>
-            body{
-                display: flex;
-                flex-direction: column;
-            }
         </style>
     </head>
 
@@ -29,7 +25,7 @@
             <a class="hyperlink-as-button" href="html/grouping.html">grouping</a><br><br>
             <a class="hyperlink-as-button" href="html/tablesAndDataRepresentation.html">tables and data representation</a>
             <a class="hyperlink-as-button" href="html/merging.html">merging in tables</a>
-            <a class="hyperlink-as-button" href="html/guess the number.html">Play Guess The Number (made by js)</a>
+            <a class="hyperlink-as-button" href="html/guess the number.html">Guess The Number (made by js)</a>
             <a class="hyperlink-as-button" href="html/javascript1.html">Learning Javascript -- 1</a>
             <a class="hyperlink-as-button" href="html/css1.html">Learning CSS -- 1</a>
 
