working on amazon clone and studying css

--- a/html/css1.html
+++ b/html/css1.html
@@ -78,9 +78,13 @@
                 </p>
             </div>
         </div>
-        <button>This is an Button</button><br>       
-        <a href=""> this is an achor tag</a>
-        <hr>
+        <button>This is an Button</button><br>  
+        <div class="outer-box" id="outer-box2">outer-box 2 rgba(0,0,255,1)</div>     
+        <div class="outer-box" id="outer-box3">outer-box 3 rgba(0,0,255,0.75)</div>     
+        <div class="outer-box" id="outer-box4">outer-box 4 rgba(0,0,255,1)</div>     
+        <br>
+        <a href=""> this is an anchor tag</a>
+        <br>
         <a class="hyperlink-as-button" href="../index.html"> Back To Home page</a>
     </body>
 </html>
