--- a/index.html
+++ b/index.html
@@ -25,9 +25,10 @@
             <a class="hyperlink-as-button" href="html/grouping.html">grouping</a><br><br>
             <a class="hyperlink-as-button" href="html/tablesAndDataRepresentation.html">tables and data representation</a>
             <a class="hyperlink-as-button" href="html/merging.html">merging in tables</a>
-            <a class="hyperlink-as-button" href="html/guess the number.html">Guess The Number (made by js)</a>
+            <a class="hyperlink-as-button" href="html/guess the number.html">Guess The Number (made by js)</a><br><br>
             <a class="hyperlink-as-button" href="html/javascript1.html">Learning Javascript -- 1</a>
             <a class="hyperlink-as-button" href="html/css1.html">Learning CSS -- 1</a>
+            <a class="hyperlink-as-button" href="html/amazonClone.html">Amazon Clone(based on pc version)</a>
 
         </div>
     </body>
