--- a/html/javascript1.html
+++ b/html/javascript1.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Learning JavaScript -- 1</title>
-    <script src="/js/Variables and DataTypes.js"></script>
-    <script src="/js/Operators and Conditional Statements.js"></script>
-    <script src="/js/Loop and Strings.js"></script>
-    <script src="/js/Arrays.js"></script>
-    <link rel="stylesheet" href="/css/style.css">
+    <script src="/js/Variables%20and%20DataTypes.js" defer></script>
+    <script src="/js/Operators%20and%20Conditional Statements.js" defer></script>
+    <script src="/js/Loop%20and%20Strings.js" defer></script>
+    <script src="/js/Arrays.js" defer></script>
+    <script src="/js/Functions%20and%20Methods.js" defer></script>
+    <link rel="stylesheet" href="/css/javascript1.css">
     <style>
         .hyperlink-as-button{  
             border: 3px , solid, rgb(15, 15, 12);
@@ -31,9 +32,24 @@
     </style>
 </head>
     <body>
-        <p>inspect the page with an right click</p>
-        <br>
-        <p>then see the console</p>
+        <p class="imp">inspect the page with an right click then see the console</p>
+        <hr>
+        <div class="notes">
+            <p>remember if you are passing an function as an argument (callback) and its
+            already decalred above as in given example above while passing it as an argument
+            you must not use () the braces.</p>
+
+            <pre>
+                <code>
+//to calulate square of nums
+let nums1 = [0,1,2,3,4,5,6,7,8,9];
+let calculateSquare = (num) => {
+    console.log(`square of ${num} = ${num**2}`); // same as val * val
+}
+nums1.forEach (calculateSquare);
+</code>
+            </pre>
+        </div>
         <hr>
         <a class="hyperlink-as-button" href="../index.html"> Back To Home page</a>
     </body>
