more learning in js

--- a/html/amazonClone.html
+++ b/html/amazonClone.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/css/amazonClone.css">
     <style>
         .hyperlink-as-button{  
-            border: 3px , solid, rgb(15, 15, 12);
+            border: 3px solid rgb(15, 15, 12);
             padding: 5px;
             margin: 10px;
             font-size: 30px;
@@ -26,16 +26,16 @@
         }
     </style>
 </head>
-<body>
-    <nav> 
-        <a class="amazon">Amazon.in</a>
-        <a>Account</a>
-        <a>My Cart</a>
-        <a>Contact Us</a>
-        <input class="search-bar" type="text" placeholder="search Amazon.in">
-        <button class="search-button">Search</button>
-    </nav>
-    <hr>
-    <a class="hyperlink-as-button" href="../index.html"> Back To Home page</a>
-</body>
+    <body>
+        <nav> 
+            <a class="amazon">Amazon.in</a>
+            <a>Account</a>
+            <a>My Cart</a>
+            <a>Contact Us</a>
+            <input class="search-bar" type="text" placeholder="search Amazon.in">
+            <button class="search-button">Search</button>
+        </nav>
+        <hr>
+        <a class="hyperlink-as-button" href="../index.html"> Back To Home page</a>
+    </body>
 </html>
