--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
             <a class="hyperlink-as-button" href="html/merging.html">merging in tables</a>
             <a class="hyperlink-as-button" href="html/guess the number.html">Guess The Number (made by js)</a><br><br>
             <a class="hyperlink-as-button" href="html/javascript1.html">Learning Javascript -- 1</a>
+            <a class="hyperlink-as-button" href="html/javascript2.html">Learning JavaScript -- 2 (DOM model)</a>
             <a class="hyperlink-as-button" href="html/css1.html">Learning CSS -- 1</a>
-            <a class="hyperlink-as-button" href="html/amazonClone.html">Amazon Clone(based on pc version)</a>
+            <a class="hyperlink-as-button" href="html/amazonClone.html">Amazon Clone(based on pc version)</a><br><br>
 
         </div>
     </body>
