--- a/html/css1.html
+++ b/html/css1.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/css/css1.css">
     <style>
         .hyperlink-as-button{  
-            border: 3px , solid, rgb(15, 15, 12);
+            border: 3px solid rgb(15, 15, 12);
             padding: 5px;
             margin: 10px;
             font-size: 30px;
