adding new work

--- a/html/javascript2.html
+++ b/html/javascript2.html
@@ -6,6 +6,7 @@
         <title>Learning JavaScript -- 2 (DOM model)</title>
         <link rel="stylesheet" href="/css/javascript2.css">
         <script src="/js/document-object-model.js" defer></script>
+        <script src="/js/events.js" defer></script>
         <style>
             .hyperlink-as-button{  
                 border: 3px solid rgb(15, 15, 12);
