--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
             <a class="hyperlink-as-button" href="html/javascript2.html">Learning JavaScript -- 2 (DOM model)</a>
             <a class="hyperlink-as-button" href="html/css1.html">Learning CSS -- 1</a>
             <a class="hyperlink-as-button" href="html/amazonClone.html">Amazon Clone(based on pc version)</a><br><br>
+            <a class="hyperlink-as-button" href="/timepass/toggle-mode.html">hover mode</a>
+            <a class="hyperlink-as-button" href="/timepass/clock.html">small clock</a>
 
         </div>
     </body>
