--- a/timepass/clock.html
+++ b/timepass/clock.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Clock</title>
+    <link rel="stylesheet" href="/css/style.css">
     <style>
         #time-bar{
             border: 2px solid black;
@@ -32,6 +33,7 @@
             <h5 id="time">Default Time</h5>
         </div>
     </div>
+    <a class="hyperlink-as-button" href="../index.html"> Back To Home page</a>
     <script>
         time = document.getElementById("time")
         setInterval(() => { 
