--- a/timepass/toggle-mode.html
+++ b/timepass/toggle-mode.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Hover Mode Example</title>
+        <link rel="stylesheet" href="/css/style.css">
         <style>
             /* Basic styles */
             body {
@@ -61,6 +62,7 @@
             Outer Div
             <div class="inner">Inner Div</div>
         </div>
+        <a class="hyperlink-as-button" href="../index.html"> Back To Home page</a>
     </body>
     <script>
         const button = document.getElementById("toggleHoverMode");
