adding tic tac toe code

--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
             <a class="hyperlink-as-button" href="html/amazonClone.html">Amazon Clone(based on pc version)</a><br><br>
             <a class="hyperlink-as-button" href="/timepass/toggle-mode.html">hover mode</a>
             <a class="hyperlink-as-button" href="/timepass/clock.html">small clock</a>
-
+            <a class="hyperlink-as-button" href="/timepass/tic-tac-toe.html"> Tic Tac Toe</a>
+            
         </div>
     </body>
 
