--- a/timepass/clock.html
+++ b/timepass/clock.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Clock</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/style.css"> <!-- for styling back to home page button only this does not style anything else -->
     <style>
         #time-bar{
             border: 2px solid black;
