--- a/timepass/tic-tac-toe.html
+++ b/timepass/tic-tac-toe.html
@@ -21,10 +21,23 @@
             height: 80vh;
             background-color: bisque;
         }
-        button {
+        #container button {
             background-color: aquamarine;
             margin: 5px;
             color: blue;
+            transition-property: all;
+            transition-duration: 200ms;
+            transition-timing-function: ease-in-out;
+
+
+        }
+
+        #container button:hover {
+            transform: scale(1.1);
+        }
+        #refresh-button {
+            background-color: aquamarine;
+            padding: 10px;
         }
         .heading {
             margin: 20px;
@@ -44,20 +57,25 @@
         <button class="button" id="8"></button>
         <button class="button" id="9"></button>
     </div>
+    <button class="button" id="refresh-button">refresh</button>
     <a class="hyperlink-as-button" href="../index.html"> Back To Home page</a>
 
     <script>
         let body = document.getElementById("body")
         let div = document.getElementById("container")
+        let refreshButton = document.getElementById("refresh-button")
+        let playerChanceHeading = document.getElementById("playerChanceHeading")
         let winner = false;
         let chance = "player 1"; // can be "player 1" or "player 2"
 
 
         let showChance = () => {
             temp = chance === "player 1" ? "X" : "O"
-            document.getElementById("playerChanceHeading").innerText = `${chance} Turn : `.concat(temp)
+            playerChanceHeading.innerText = `${chance} Turn : `.concat(temp)
         }
+
         let changeChance = () => chance === "player 1" ? chance = "player 2" : chance = "player 1" 
+        
         let enterText = (el) => {
             if(chance === "player 1") {
                 el.innerText = "X" // putting X
@@ -86,29 +104,31 @@
                 const[a,b,c] = combo                // unpacking combos into 3 values a, b, c
                 if(box[a].innerText === "" || box[b].innerText === "" || box[c].innerText === "") {
                     //initial case when the web page loads inner text are empty 
+                    return false
                 } else if(box[a].innerText === box[b].innerText && box[b].innerText === box[c].innerText) {  // checking winning condition
                     winner = true
                     changeChance()
-                    alert(`Congratulations ${chance} wins!!`)
+                    console.log((`Congratulations ${chance} wins!!`))
+                    playerChanceHeading.innerText = `Congratulations ${chance} wins!!`
                 }
             });
         }
         let play = (e) => {
             let el = e.target
-            if(winner) {
-                //refresh the page
-            } else {
+            if(!winner) {
                 if(el.classList.contains("button")) {
-                    console.dir(el) // printing the target element if button
+                    console.log("clicked");console.dir(el) // printing the target element if button was clicked
                     enterText(el)  // printing X or O based on player chance
                     showChance() // to update after the TextInput of X or O
                     checkWinning()
                 }
             }
         }
+        let refreshPage = () => location.reload() // reloads the page
 
         showChance() //to show chances intialy 
         div.addEventListener('click',play,false)
+        refreshButton.addEventListener('click',refreshPage,false)
 
     </script>
 </body>
